Add Front End Framework to Project.

--- a/views/footer.html.twig
+++ b/views/footer.html.twig
@@ -1,14 +1,7 @@
-
-        <footer>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <hr>
-            <p><a href='/'>Back to Home</a></p>
+        </div> <!-- End Main Container Div -->
+        <footer id="#bottom" class="mainFooter">
+            <small class="text-muted">All Rights Reserved to J. Ryan Conklin for the Website.</small>
+            <small class="text-muted"><a href="/">Return Home</a> | <a href="#top">Back to top &raquo;</a></small>
         </footer>
-        </div>
     </body>
 </html>
