--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,5 +1,18 @@
 {% include 'header.html.twig' %}
+            <div class="pageHead">
+                <h2>Welcome to shoeCONNECT</h2>
+                <small class="text-muted">An Interactive Shoe Management System by styleTech Inc.</small>
+            </div>
 
-    <h2>These are Website Instructions</h2>
+            <div class="mainSection row">
+                    <div class="col-sm-6 shoes">
+                        <h3>Stores</h3>
+                        <a href="/stores">Add or Edit Stores</a>
+                    </div>
+                    <div class="col-sm-6 brands">
+                        <h3>Brands</h3>
+                        <a href="/brands">Add or Edit Brands</a>
+                    </div>
+            </div>
 
 {% include 'footer.html.twig' %}
