--- a/views/header.html.twig
+++ b/views/header.html.twig
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <title>This is a Website Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/styles.css" media="screen" title="Main Custom Styles">
+        <title>J. Ryan Conklin || PHP CR 4 </title>
     </head>
+
+    <header id="top" class="mainHeader">
+        <div class="container-fluid">
+            <h1>J. Ryan Conklin</h1>
+            <h3>Epicodus: PHP Fall 2016</h3>
+        </div>
+    </header>
+
     <body>
         <div class="container">
-            <header>
-                <h1>This is a Website Header</h1>
-            </header>
