--- a/views/brand_edit.html.twig
+++ b/views/brand_edit.html.twig
@@ -5,11 +5,11 @@
             </div>
 
             <div class="mainSection row">
-                <h4>Update Info on {{ store.getName }}</h4>
+                <h4>Update Info on {{ brand.getName }}</h4>
                 <div class="edit-form">
-                    <form action="/stores/{{ store.getId }}" method="post">
+                    <form action="/brands/{{ brand.getId }}" method="post">
                         <input name="_method" type="hidden" value="patch">
-                        <label for="name">Rename {{ store.getName }}</label>
+                        <label for="name">Rename {{ brand.getName }}</label>
                         <input id="name" name="name" type="text">
                         <button class="btn btn-success" type="submit">Update</button>
                     </form>
