--- a/views/stores.html.twig
+++ b/views/stores.html.twig
@@ -6,12 +6,15 @@
             <div class="mainSection">
                 {% if stores is not empty %}
                 <div class="row">
-                    <h4>Available Stores:</h4>
+                    <h4>Available Stores</h4>
+                    <hr>
                     <div class="col-sm-3">
                     </div>
                     <div class="list-group col-sm-6">
                         {% for store in stores %}
-                        <li class="list-group-item"><a class="list-group-item-action" href="/stores/{{ store.getId }}">{{ store.getName }}</a></li>
+                        <ul>
+                            <li class="list-group-item"><a class="list-group-item-action" href="/stores/{{ store.getId }}">{{ store.getName }}</a></li>
+                        </ul>
                         {% endfor %}
                     </div>
                     <div class="col-sm-3">
@@ -20,6 +23,7 @@
                     <h3>No Stores Quite Yet</h3>
                 {% endif %}
                 </div>
+                <hr>
                 <form action="/stores" method="post" class="form-inline add-data">
                     <div class="form-group">
                         <label for="name">Store Name</label>
